--- a/frontend/src/app/chat-body/chat-body.component.html
+++ b/frontend/src/app/chat-body/chat-body.component.html
@@ -1,6 +1,6 @@
 <div class="chat-body">
-  <app-chat-history />
   @if (isAnyChatActive()) {
+  <app-chat-history />
 
   <div class="input-container">
     <textarea
@@ -20,5 +20,17 @@
     </div>
     }
   </div>
+  }@else {
+  <h1 class="opening-title">Welcome your chatbot</h1>
+  <textarea
+    [(ngModel)]="userInput"
+    (keydown.enter)="createNewChat($event)"
+    [disabled]="isLoading"
+    placeholder="{{
+      isLoading ? 'Waiting for response...' : 'Type your message here...'
+    }}"
+    class="input-field"
+    [class.loading]="isLoading"
+  ></textarea>
   }
 </div>
