changed welcome message

--- a/frontend/src/app/chat-body/chat-body.component.html
+++ b/frontend/src/app/chat-body/chat-body.component.html
@@ -21,7 +21,7 @@
     }
   </div>
   }@else {
-  <h1 class="opening-title">Welcome your chatbot</h1>
+  <h1 class="opening-title">Welcome!!!</h1>
   <textarea
     [(ngModel)]="userInput"
     (keydown.enter)="createNewChat($event)"
